add offices was not working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <h1>Eberardo's Appoitnment Manager</h1>
+    <%= link_to  "Physician", physicians_path %>
+    <%= link_to  "Appointment", appointments_path %>
+    <%= link_to  "Patient", patients_path %>
     <%= yield %>
   </body>
 </html>
