--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= office.street %></td>
         <td><%= office.zip %></td>
         <td><%= office.phone %></td>
-        <td><%= office.physician_id %></td>
+        <td><%= office.physician.name %></td>
         <td><%= link_to 'Show', office %></td>
         <td><%= link_to 'Edit', edit_office_path(office) %></td>
         <td><%= link_to 'Destroy', office, method: :delete, data: { confirm: 'Are you sure?' } %></td>
