--- a/app/views/offices/_form.html.erb
+++ b/app/views/offices/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :physician_id %>
-    <%= form.text_field :physician_id %>
+    <%= form.collection_select :physician_id, Physician.all, :id, :name %>
   </div>
 
   <div class="actions">
