--- a/app/views/physicians/_form.html.erb
+++ b/app/views/physicians/_form.html.erb
@@ -21,6 +21,16 @@
     <%= form.text_field :specialty %>
   </div>
 
+  <h3>Offices</h3>
+
+  <div id='offices'>
+    <%= form.fields_for :offices do |office| %>
+      <%= render 'office_fields', :f => office %>
+    <% end %>
+    <div class='links'>
+      <%= link_to_add_association 'Add Office', form, :offices %>
+    </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
